--- a/contato.html
+++ b/contato.html
@@ -11,10 +11,10 @@
 
 <body>
     <header>
-        <h1><a href="semant.html">Meu Site</a></h1>
+        <h1><a href="index.html">Comércio de Livros</a></h1>
         <nav>
             <ul>
-                <li><a href="semant.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="produtos.html">Produtos</a></li>
                 <li><a id="contato" href="contato.html">Contato</a></li>
             </ul>
