Fixing the navigation bar

--- a/produtos.html
+++ b/produtos.html
@@ -12,10 +12,10 @@
 
 <body>
     <header>
-        <h1><a href="index.html">Meu Site</a></h1>
+        <h1><a href="index.html">Comércio de Livros</a></h1>
         <nav>
             <ul>
-                <li><a href="index.html">Comércio de Livros</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a id="produtos" href="produtos.html">Produtos</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
